[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "predator-prey-simulation"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.8"
tqdm = "^4.59.0"
[tool.poetry.dev-dependencies]
